cmake_minimum_required(VERSION 3.6)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

project(tesk)

add_subdirectory(assignment1)
add_subdirectory(assignment2)
add_subdirectory(assignment3)
add_subdirectory(assignment4)
add_subdirectory(assignment5)
add_subdirectory(assignment6)
add_subdirectory(assignment7)